filecodebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filecodebox
  namespace: app-dev
spec:
  selector:
    app: filecodebox
  ports:
    - port: 80
      targetPort: 12345
