filecodebox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filecodebox
  namespace: app-dev
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`filecodebox.lab-hc.cloud`)
      kind: Rule
      services:
        - name: filecodebox
          port: 80
